Fix the react logo going behind the nav

--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@ body {
 }
 
 .background-react {
-  width: 400px;
+  width: 300px;
   position: absolute;
-  right: -200px;
-  top: calc(50% - 200px);
+  right: -150px;
+  top: calc(50% - 150px);
   opacity: 20%;
+  z-index: -5;
 }
 
 /* Navigation */
@@ -42,6 +43,7 @@ nav {
   padding: 10px 20px;
   box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
   margin: 0;
+  background: white;
 }
 
 .nav__links {
